--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "why-is-node-running": "^3.2.2"
   }
 }
